--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,20 @@
 			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
-				<version>5.1.37</version>
+				<version>5.1.6</version>
 			</dependency>
 			<dependency>
 				<groupId>com.qibaiku</groupId>
 				<artifactId>server</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+				<groupId>tk.mybatis</groupId>
+				<artifactId>mapper-spring-boot-starter</artifactId>
+				<version>1.2.4</version>
+			</dependency>
+
+
 
 		</dependencies>
 	</dependencyManagement>
@@ -75,7 +82,12 @@
 					<dependency>
 						<groupId>mysql</groupId>
 						<artifactId>mysql-connector-java</artifactId>
-						<version>5.1.37</version>
+						<version>5.1.6</version>
+					</dependency>
+					<dependency>
+						<groupId>tk.mybatis</groupId>
+						<artifactId>mapper-spring-boot-starter</artifactId>
+						<version>1.2.4</version>
 					</dependency>
 				</dependencies>
 			</plugin>
