--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -1,8 +1,8 @@
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://cdb-oix59nc4.bj.tencentcdb.com:10031/course?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
-spring.datasource.username=:course
-spring.datasource.password=:123456
+spring.datasource.username=course
+spring.datasource.password=123456
 
 mybatis.mapper-locations=classpath:/mapper/*.xml
 
