--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
 				<version>1.2.4</version>
 			</dependency>
 
+			<!-- mybatis分页插件pagehelper -->
+			<dependency>
+				<groupId>com.github.pagehelper</groupId>
+				<artifactId>pagehelper-spring-boot-starter</artifactId>
+				<version>1.2.10</version>
+			</dependency>
+
+
 
 
 		</dependencies>
