--- a/server/pom.xml
+++ b/server/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>mapper-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+        </dependency>
+
 
 
 
