--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=123456
 
 mybatis.mapper-locations=classpath:/mapper/*.xml
 
-logging.level.com.qibaiku.server.mapper =trace
+logging.level.com.course.server.mapper =trace
